@@ -1,4 +1,4 @@
         .type main,"function"
         .global main
 main:
-        .long 0
+        .dc.a b
